// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-mobile"
    >
      Expenses
    </div>
    <div
      className="show-desktop"
    >
      Expense
    </div>
    <div
      className="show-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={200}
      createdAt={2592000000}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={20000}
      createdAt={0}
      description="Gas bill"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={2000}
      createdAt={1296000000}
      description="Water Bill"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`Should render expenses list without expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-mobile"
    >
      Expenses
    </div>
    <div
      className="show-desktop"
    >
      Expense
    </div>
    <div
      className="show-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
         No Expenses to Show
      </span>
    </div>
  </div>
</div>
`;
